<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/placeholder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hop_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/hops_name_label"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/hops_name"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hop_country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/hop_country_label"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/hops_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hops_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/hops_description_label"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/hops_description"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hops_creation_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/hops_creation_label"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/hops_creation_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hops_acid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/hops_acid_label"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/hops_acid"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:textSize="12sp" />

        </LinearLayout>

      </LinearLayout>
 </android.support.v7.widget.CardView>